Double y scrollbar on mobile fix

--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -1,7 +1,6 @@
 main {
   background-color: rgb(247, 248, 249);
   height: calc(100vh - 4rem);
-  overflow-y: scroll;
 
   .emptystate-container {
     display: flex;
